--- a/caloriecounter/tracker/templates/tracker/index.html
+++ b/caloriecounter/tracker/templates/tracker/index.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-md-6">
         <h2>Food Tracker</h2>
-        <form action="{% url 'tracker:add_food_log' %}" method="post">
+        <form method="post">
             {% csrf_token %}
             <div class="mb-3">
                 <label for="food_item" class="form-label">Food Item</label>
