Add Food from FDA API Feature

--- a/caloriecounter/food/templates/food/food_detail.html
+++ b/caloriecounter/food/templates/food/food_detail.html
@@ -8,7 +8,7 @@
     {% if food_item.image %}
     <img src="{{ food_item.image.url }}" alt="{{ food_item.name }}" class="img-fluid my-4">
     {% else %}
-    <img src="{% static 'default_food_image.jpg' %}" alt="Default food image" class="img-fluid my-4">
+    <img src="{% static 'default_food_image.png' %}" alt="Default food image" class="img-fluid my-4">
     {% endif %}
 
     <h3>Description</h3>
